logs/tests.log
/Users/josephvanliew/Documents/GVSU/2024 Spring/Software_Testing/Assignments/PATS/src/test/java/org/petrinet/ServiceTest.java:231: error: method evaluateTransition in class PetriNetService cannot be applied to given types;
        boolean result = service.evaluateTransition(transition, arcsMap, placesMap, totalIncomingTransitionCounts);
                                ^
  required: Transition,Map<String,Arc>,Map<String,Place>
  found:    Transition,Map<String,Arc>,Map<String,Place>,Map<String,Integer>
  reason: actual and formal argument lists differ in length
/Users/josephvanliew/Documents/GVSU/2024 Spring/Software_Testing/Assignments/PATS/src/test/java/org/petrinet/ServiceTest.java:252: error: method evaluateTransition in class PetriNetService cannot be applied to given types;
        boolean result = service.evaluateTransition(transition, arcsMap, placesMap, totalIncomingTransitionCounts);
                                ^
  required: Transition,Map<String,Arc>,Map<String,Place>
  found:    Transition,Map<String,Arc>,Map<String,Place>,Map<String,Integer>
  reason: actual and formal argument lists differ in length
/Users/josephvanliew/Documents/GVSU/2024 Spring/Software_Testing/Assignments/PATS/src/test/java/org/petrinet/ServiceTest.java:272: error: method evaluateTransition in class PetriNetService cannot be applied to given types;
        boolean result = service.evaluateTransition(transition, arcsMap, placesMap, totalIncomingTransitionCounts);
                                ^
  required: Transition,Map<String,Arc>,Map<String,Place>
  found:    Transition,Map<String,Arc>,Map<String,Place>,Map<String,Integer>
  reason: actual and formal argument lists differ in length
/Users/josephvanliew/Documents/GVSU/2024 Spring/Software_Testing/Assignments/PATS/src/test/java/org/petrinet/ServiceTest.java:662: error: cannot find symbol
        Map<String, Integer> counts = service.calculateTotalIncomingTransitionCounts(transitions, arcsMap);
                                             ^
  symbol:   method calculateTotalIncomingTransitionCounts(List<Transition>,Map<String,Arc>)
  location: variable service of type PetriNetService
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 544ms
